<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp">
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:orientation="vertical">-->

    <ImageView
        android:id="@+id/kontakter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:src="@drawable/connection"
        app:layout_constraintBottom_toTopOf="@+id/registrer_fornavn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registrer_fornavn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/editttext_border"
        android:hint="@string/hint_fornavn"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/registrer_etternavn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registrer_etternavn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/editttext_border"
        android:hint="@string/hint_etternavn"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/registrer_tlf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registrer_tlf"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/editttext_border"
        android:hint="@string/hint_tlf"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--<Button
        android:id="@+id/btn_registrer_kontakt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/editbtn_register"
        android:text="Register kontakt"
        android:textColor="#ffffff"></Button>-->

    <!--</LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>