<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/visBesøklayout"
        android:visibility="visible">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_restaurant"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txt_edit_besøk_resturant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"

            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_adresse"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/txt_edit_besøk_adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_dato"
            android:textSize="15sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_edit_besøk_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_gjester"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:id="@+id/show_kontakter_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>


        </ScrollView>



        <!--<Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="Inviter"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"

            android:id="@+id/btn_legg_til_kontakter"
            android:background="@drawable/editbtn_register"/>-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible"
        android:id="@+id/visBesøklayout_inviter">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"

            android:id="@+id/visBesøklayout_kontakter"
            />

        <!--<Button
            android:id="@+id/btn_visBesøklayout_avbryt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="Inviter valgte kontakter"
            android:textAllCaps="false"

            android:layout_marginBottom="20dp"
            android:background="@drawable/editbtn_register"
            />-->


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>