<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visResturantLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_type"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txt_edit_resturant_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_tlf"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txt_edit_resturant_tlf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/hint_navn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txt_edit_resturant_navn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_adresse"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txt_edit_resturant_adresse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_edit_resturant_navn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/editttext_border"

        android:hint="@string/hint_navn"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_edit_resturant_adresse"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/editttext_border"
        android:padding="10dp"
        android:textSize="20sp"
        android:hint="@string/hint_adresse"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_edit_resturant_navn" />

    <EditText
        android:id="@+id/txt_edit_resturant_tlf"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="43dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/editttext_border"
        android:hint="@string/hint_tlf"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_edit_resturant_adresse" />

    <Spinner
        android:id="@+id/txt_edit_resturant_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/editttext_border"
        android:hint="@string/hint_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_edit_resturant_tlf"
        app:layout_constraintVertical_bias="0.0" />


    <!--<Button
        android:id="@+id/btn_edit_resturant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/editbtn_register"
        android:text="Rediger"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>